tests/fail/redirect_conflict_double_file.msh
# Conflict: two stdout file redirects must error
[ls] `conflict_f.txt` > `conflict_g.txt` > ;
